# cv-radar-interface

./: .gitignore  README.md  mac_test.py  main.py  my_serial.py  pyproject.toml  radar.py  radar_Interface.py  ui.py
